--- a/MovementTestTask2_0/login/templates/login/index.html
+++ b/MovementTestTask2_0/login/templates/login/index.html
@@ -1,15 +1,13 @@
 {% load static %}
 <link rel="stylesheet" href="{%  static 'login/style.css' %}">
 
-<form method="post" enctype="multipart/form-data">
+<form action="{% url 'success'  %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
    {% for field in form %}
     <div class="fieldWrapper">
         {{ field.errors }}
         {{ field.label_tag }} {{ field }}
     </div>
-
 {% endfor %}
-<input type="date" name="my_date" required="" id="id_my_date">
     <button class="btn btn-primary my-4" type="submit">Submit</button>
 </form>
