--- a/MovementTestTask2_0/login/templates/login/success.html
+++ b/MovementTestTask2_0/login/templates/login/success.html
@@ -1,2 +1,7 @@
+{% load static %}
+<link rel="stylesheet" href="{% static 'login/style.css' %}">
+<body>
 <h1>You have successfuly created User:</h1>
 <h2>{{ name }} {{ surname }}</h2>
+
+</body>
